tests/cases/modules/ok/project-compiler-main.ari
mod project_compiler;

fn main() -> i64 {
  return project_compiler::run();
}
